# get_the_comp_conf

./: .gitignore  Makefile  README.md  pyproject.toml
get_the_comp_conf/: example_hosts-xxxx-xx-xx_GRVKK.csv  example_hosts-xxxx-xx-xx_RGITS.csv  example_hosts-xxxx-xx-xx_kamges.csv  fabfile.py
